[gd_scene load_steps=33 format=2]

[ext_resource path="res://src/Sprites/mud enemy.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Enemy_Mud.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 170.667, 31.6667 )

[sub_resource type="RectangleShape2D" id=34]
extents = Vector2( 8.83333, 2.5 )

[sub_resource type="Animation" id=1]
resource_name = "Attack"
length = 1.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 3, 0 ), Vector2( 3, 1 ), Vector2( 3, 2 ), Vector2( 3, 3 ), Vector2( 3, 4 ), Vector2( 3, 5 ), Vector2( 3, 6 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Die"
length = 0.9
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 2, 2 ), Vector2( 2, 3 ), Vector2( 2, 4 ), Vector2( 2, 5 ), Vector2( 2, 6 ), Vector2( 2, 7 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Generate"
length = 0.9
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 2, 7 ), Vector2( 2, 6 ), Vector2( 2, 5 ), Vector2( 2, 4 ), Vector2( 2, 3 ), Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Hurt"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 2, 0 ), Vector2( 2, 1 ), Vector2( 2, 0 ), Vector2( 2, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.75
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( 0, 2 ), Vector2( 0, 3 ), Vector2( 0, 4 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Walk"
length = 0.9
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 0 ), Vector2( 1, 1 ), Vector2( 1, 2 ), Vector2( 1, 3 ), Vector2( 1, 4 ), Vector2( 1, 5 ) ]
}

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 12, 7.66667 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 5.33333, 8 )

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "Die"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "Generate"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "Hurt"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=23]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachine" id=31]
states/Attack/node = SubResource( 18 )
states/Attack/position = Vector2( 730, 116 )
states/Die/node = SubResource( 19 )
states/Die/position = Vector2( 730, 215 )
states/Generate/node = SubResource( 20 )
states/Generate/position = Vector2( 356, 116 )
states/Hurt/node = SubResource( 35 )
states/Hurt/position = Vector2( 875, 158 )
states/Idle/node = SubResource( 21 )
states/Idle/position = Vector2( 554, 215 )
states/Walk/node = SubResource( 22 )
states/Walk/position = Vector2( 554, 116 )
transitions = [ "Walk", "Idle", SubResource( 24 ), "Idle", "Die", SubResource( 25 ), "Walk", "Die", SubResource( 26 ), "Idle", "Walk", SubResource( 27 ), "Idle", "Attack", SubResource( 28 ), "Walk", "Attack", SubResource( 29 ), "Attack", "Idle", SubResource( 30 ), "Generate", "Walk", SubResource( 23 ), "Idle", "Hurt", SubResource( 36 ), "Hurt", "Idle", SubResource( 37 ), "Attack", "Hurt", SubResource( 38 ) ]
start_node = "Generate"
graph_offset = Vector2( 27, 38 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=17]

[node name="Mud Enemy" type="KinematicBody2D"]
scale = Vector2( 8, 8 )
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )
speed = 200.0
attack_speed = 300.0

[node name="PlayerRangeDetector" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerRangeDetector"]
position = Vector2( 0, -32 )
shape = SubResource( 32 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 7.62939e-06 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -14, -21 )
hframes = 4
vframes = 8
frame = 3

[node name="Spear" type="Area2D" parent="Sprite"]
collision_layer = 0
monitorable = false

[node name="SpearCollider" type="CollisionShape2D" parent="Sprite/Spear"]
position = Vector2( 8.16667, -5.33334 )
shape = SubResource( 34 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 1 )
anims/Die = SubResource( 2 )
anims/Generate = SubResource( 8 )
anims/Hurt = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/RESET = SubResource( 5 )
anims/Walk = SubResource( 6 )

[node name="PlayerHandDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHandDetector"]
position = Vector2( -1.33333, -8.33333 )
shape = SubResource( 33 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.833334, -8 )
shape = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 31 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 17 )

[connection signal="body_entered" from="PlayerRangeDetector" to="." method="_on_PlayerRangeDetector_body_entered"]
[connection signal="body_exited" from="PlayerRangeDetector" to="." method="_on_PlayerRangeDetector_body_exited"]
[connection signal="body_entered" from="Sprite/Spear" to="." method="_on_Spear_body_entered"]
[connection signal="body_exited" from="Sprite/Spear" to="." method="_on_Spear_body_exited"]
[connection signal="body_entered" from="PlayerHandDetector" to="." method="_on_PlayerHandDetector_body_entered"]
[connection signal="body_exited" from="PlayerHandDetector" to="." method="_on_PlayerHandDetector_body_exited"]
